# INF_1220

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
.codex/skills/inf1220-m1/: SKILL.md  skill.json
notebooks/: INF1220_M1-07_NB3_Loops_Arrays_Average.ipynb
notebooks/inf1220_nb/: INF1220_M1-07_NB1_Foundations.ipynb  INF1220_M1-07_NB2_Booleans_Conditionals.ipynb
src/cbia_workbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cbia_workbench/p2_inference/operators/: io_json.py
src/cbia_workbench/p3_control/logging/: session_ndjson.py
tests/: test_io_json.py  test_ramp1_purity.py
