[project]
name = "cbia-workbench"
version = "0.0.0"
description = "CBIA tooling/workbench (consumes generated material; provides REPL + observability helpers)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "konch>=6.0.1",
  "ptpython>=3.0.32",
  "rich>=13.7.0",
  "jupyterlab>=4.5.0",
  "jupyterlab-unfold>=0.3.4",
  "jupytext>=1.18.1",
  "numpy>=2.3.5",
  "sympy>=1.14.0",
  "jupytext",
  "jupyterlab-lsp>=5.2.0",
  "jupyter-lsp>=2.3.0",
  "python-lsp-server[all]>=1.14.0",
  "jupyterlab-code-formatter>=3.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "pyright>=1.1.380",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# If/when you vendor algoctrl as a workspace package, add:
# [tool.uv.sources]
# algoctrl-tmpl = { path = "packages/algoctrl", editable = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
